// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoldTransactionFeedItem renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="GoldTransactionFeedItem"
>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingBottom": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          feedItemGoldPurchased
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "flexWrap": "wrap",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
           @ 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "flexWrap": "wrap",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
              },
            ]
          }
          testID="GoldTransactionFeedItemRate/value"
        >
          
          €
          0.55
        </Text>
      </View>
      <View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
              },
            ]
          }
          testID="GoldTransactionFeedItemAmount/value"
        >
          
          €
          1.23
        </Text>
      </View>
    </View>
    <View
      style={Object {}}
    >
      <Text
        style={
          Object {
            "color": "#9CA4A9",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
      >
        Dec 31 at 5:00 PM
      </Text>
    </View>
  </View>
</View>
`;

exports[`GoldTransactionFeedItem renders correctly when local amount is null 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="GoldTransactionFeedItem"
>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingBottom": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          feedItemGoldPurchased
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "flexWrap": "wrap",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
           @ 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "flexWrap": "wrap",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
              },
            ]
          }
          testID="GoldTransactionFeedItemRate/value"
        >
          
          -
        </Text>
      </View>
      <View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
              },
            ]
          }
          testID="GoldTransactionFeedItemAmount/value"
        >
          -
          ₱
          1.33
        </Text>
      </View>
    </View>
    <View
      style={Object {}}
    >
      <Text
        style={
          Object {
            "color": "#9CA4A9",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
      >
        Dec 31 at 5:00 PM
      </Text>
    </View>
  </View>
</View>
`;

exports[`GoldTransactionFeedItem renders correctly when local amount is null and no local exchange rate is set 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="GoldTransactionFeedItem"
>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingBottom": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          feedItemGoldPurchased
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "flexWrap": "wrap",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
           @ 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "flexWrap": "wrap",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
              },
            ]
          }
          testID="GoldTransactionFeedItemRate/value"
        >
          
          -
        </Text>
      </View>
      <View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
              },
            ]
          }
          testID="GoldTransactionFeedItemAmount/value"
        >
          
          -
        </Text>
      </View>
    </View>
    <View
      style={Object {}}
    >
      <Text
        style={
          Object {
            "color": "#9CA4A9",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
      >
        Dec 31 at 5:00 PM
      </Text>
    </View>
  </View>
</View>
`;
